Added global values

--- a/index.html
+++ b/index.html
@@ -7,23 +7,17 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
  
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <title>Frontend Mentor | QR code component</title>
+  <title>Tennille | QR code component | Frontend Mentor</title>
 
 </head>
 <body>
   <main class="main-container">
     <div class="card"> 
-        <img src="images/image-qr-code.png" alt="qr code">
-        <h1>Improve your front-end skills by building projects</h1>
-        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        <img class="card-qr-code" src="images/image-qr-code.png" alt="qr code">
+        <h1 class="card-title">Improve your front-end skills by building projects</h1>
+        <p class="card-details">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 
     </div>
   </main>
-  <footer class="attribution-container">
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/tennilleclayton">Tennille Clayton</a>.
-    </div>
-  </footer>
 </body>
 </html>
