--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
   <main class="main-container">
     <div class="card"> 
         <img class="card-qr-code" src="images/image-qr-code.png" alt="qr code">
-        <h1 class="card-title">Improve your front-end skills by building projects</h1>
-        <p class="card-details">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-
+        <section class="card-description">
+          <h1 class="card-title">Improve your front-end skills by building projects</h1>
+          <p class="card-details">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </section>
     </div>
   </main>
 </body>
